--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
