--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.17.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.15",
-    "@types/mdx": "^2.0.13",
     "bootstrap": "^5.3.3",
     "next": "^14.2.15",
     "prismjs": "^1.29.0",
@@ -21,9 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "rehype-highlight": "^7.0.0",
-    "remark-gfm": "^4.0.0"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
